# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp  image_processor.h
filters/: crop.cpp  crystallize.cpp  edge_detection.cpp  gaussian_blur.cpp  grayscale.cpp  negative.cpp  sharpening.cpp
parser/: parser.cpp  parser.h
services/: errors.h
services/io/: reader.cpp  reader.h  writer.cpp  writer.h
services/utils/: cache.h  format.h  image_utils.cpp  image_utils.h  math_utils.cpp  math_utils.h
structs/: filter.h
structs/image/: bmp_image.cpp  bmp_image.h  color.cpp  color.h
